@@ -9,6 +9,8 @@ program_name = 'banshee'
 window_title = '*Banshee Music Player'
 
 a11y_test_init (program_name)
+
+time.sleep (10)
 guiexist (window_title)
 
 a11y_scan_window (window_title)
@@ -23,16 +25,24 @@ selectmenuitem (window_title, 'mnuEdit;mnuPlugins')
 a11y_scan_dialog ('dlgBansheePlugins', 'btnClose')
 
 selectmenuitem (window_title, 'mnuEdit;mnuPreferences')
-a11y_scan_dialog ('*Preferences', 'btnCancel')
+if (objectexist ('*Preferences', 'btnCancel')):
+    a11y_scan_dialog ('*Preferences', 'btnCancel')
+else:
+    a11y_scan_dialog ('*Preferences', 'btnClose')
 
 selectmenuitem (window_title, 'mnuView;mnuColumns')
 a11y_scan_dialog ('*ChooseColumns', 'btnClose')
 
-selectmenuitem (window_title, 'mnuView;mnuLoggedEventsViewer')
-a11y_scan_dialog ('*LogViewer', 'btnClose')
+if (objectexist (window_title, 'mnuView;mnuLoggedEventsViewer')):
+    selectmenuitem (window_title, 'mnuView;mnuLoggedEventsViewer')
+    a11y_scan_dialog ('*LogViewer', 'btnClose')
 
-selectmenuitem (window_title, 'mnuHelp;mnuVersionInformation')
-a11y_scan_dialog ('*AssemblyVersionInformation', 'btnClose')
+if (objectexist (window_title, 'mnuHelp;mnuVersionInformation')):
+    selectmenuitem (window_title, 'mnuHelp;mnuVersionInformation')
+    a11y_scan_dialog ('*AssemblyVersionInformation', 'btnClose')
+else:
+    selectmenuitem (window_title, 'mnuHelp;mnuAbout')
+    a11y_scan_dialog ('*About*Banshee', 'btnClose')
 
 selectmenuitem (window_title, 'mnuMusic;mnuQuit')
 
