@@ -1,3 +1,7 @@
+2006-11-22  Rodney Dawes  <dobey@novell.com>
+
+	* scripts/banshee.py: Update to work with banshee 0.11.2 as well
+
 2006-11-09  Rodney Dawes  <dobey@novell.com>
 
 	* python/A11yTestUtils.py (a11y_find_panel_with_applet): Add a new
